--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <input type="text" placeholder="nombre"<br>
+        <input type="text"><br>
         <input type="text" placeholder="email"><br>
         <br>
     </main>
